kubernetes/default/tls-client-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tls-client-api
  namespace: default
spec:
  selector:
    app: tls-client-api
  ports:
    - port: 8080
      targetPort: 8080
